@@ -1,4 +1,5 @@
-3/1/12 bug fix: concentration slider doesn't show correct initial non-zero value
+3/2/12 use transmittance (T) in model, convert to percent transmittance (%T) in view
+3/2/12 bug fix: concentration slider doesn't show correct initial non-zero value
 3/1/12 Beers: make AT detector non movable
 3/1/12 Beers: start with 100 units of concentration for each solution
 3/1/12 static methods for A and %T models
